WSL の自動起動設定を README に追記

--- a/notebooks/01_optimization.ipynb
+++ b/notebooks/01_optimization.ipynb
@@ -1,9 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "2c64fc6f-9071-4f0a-b999-2144d0da0eda",
+   "metadata": {},
+   "source": [
+    "# 1. 最適化\n",
+    "\n",
+    "## 1-1. はじめに\n",
+    "機械学習では、あるスカラー値の**損失関数 (loss function)** または**費用関数 (cost function)** $\\mathcal{L}: \\Theta \\rightarrow \\mathbb{R}$ を最小にするパラメータ $\\theta \\in \\Theta$ を求める。"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c64fc6f-9071-4f0a-b999-2144d0da0eda",
+   "id": "f85ed98e-cb66-4a2e-9e90-5880eb5bec77",
    "metadata": {},
    "outputs": [],
    "source": []
